--- a/src/assets/css/myStyle.less
+++ b/src/assets/css/myStyle.less
@@ -31,6 +31,10 @@
   min-height: @h;
 }
 
+.MaxWh(@w; @h: @w) {
+  max-width: @w;
+  max-height: @h;
+}
 
 .BoxRadius(@tl: 16px; @tr: 16px; @bl: 16px; @br: 16px) {
   border-top-left-radius: @tl;
