--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,74 +1,4 @@
-@import url('./assets/css/myStyle.less');
-
-* {
-    box-sizing: border-box;
-}
-
-// 页面样式
-
-.yBox-navbar {
-    position: fixed;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.yBox-banner {
-    display: flex;
-    justify-content: center;
-}
-
-.yNavBar {
-    display: flex;
-    align-items: center;
-    padding: 0 12px;
-    .CardBox(1198px, 56px, #50b6fa2b);
-
-    ul {
-        flex: 1;
-        display: flex;
-        height: 100%;
-
-        li {
-            .FlexCenter();
-            width: 25%;
-            font-size: 24px;
-            // color: #63043d;
-            color: #FFF;
-            font-weight: 400;
-            transition: all 0.4s;
-
-            &:hover {
-                background-color: #50b6fa2b;
-                border: 10px solid transparent;
-                border-width: 12px 8px;
-                border-image: url("./assets/images/common/border-img.png") 12 8 round;
-            }
-
-        }
-    }
-
-    .nav-icon {
-        margin-right: 12px;
-        .CardBox(40px, 40px, #6f0707);
-        clip-path: polygon(0 0, 28% 11%, 50% 30%, 72% 11%, 100% 0, 83% 39%, 60% 52%, 49% 100%, 40% 52%, 17% 39%, 0 0, 0 0);
-
-    }
-
-}
-
-.yBanner {
-    width: 100%;
-
-    .banner-img {
-        .Wh(100%, 160px);
-        // min-width: 1198px;
-        background: url('./assets/images/background/1.png') no-repeat;
-        background-position: 0px -200px;
-    }
-}
-
+@import url('../../assets/css/myStyle.less');
 
 #yMainContent {
     max-width: 1198px;
@@ -77,6 +7,8 @@
     .yMain-dataList {
         display: flex;
         flex-wrap: wrap;
+        min-height: 1200px;
+        background-color: #bdfafd8f;
 
         .card-item {
             margin: 6px 8px;
@@ -123,7 +55,7 @@
         .CardBox(800px, 550px, #FFF, 12px);
 
         // transition: all 0.3s;
-        animation: showToast 0.7s ease-out;
+        animation: showToast 0.6s ease-in;
 
 
         @keyframes showToast {
