--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -47,7 +47,7 @@
     }
 
     .pop-content {
-        position: absolute;
+        position: fixed;
         z-index: 10;
         .FlexCenter();
         flex-direction: column;
