--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -4,7 +4,21 @@
     display: flex;
     align-items: center;
     padding: 0 12px;
-    .CardBox(1198px, 56px, #50b6fa2b);
+    .CardBox(1198px, 52px, transparent, 0);
+    transition: all 0.6s;
+
+    &.bgShow {
+        background-color: #2d59a0;
+
+        .nav-icon {
+            background-color: #FFF;
+        }
+
+        ul>li {
+            color: #5ff0fa;
+
+        }
+    }
 
     ul {
         flex: 1;
