--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     padding: 0 12px;
-    .CardBox(1198px, 52px, transparent, 0);
+    .CardBox(1198px, 52px, #50b6fa2b, 0);
     transition: all 0.6s;
 
     &.bgShow {
