--- a/src/assets/css/app.less
+++ b/src/assets/css/app.less
@@ -8,6 +8,7 @@
 .yBox-navbar {
     position: fixed;
     top: 0;
+    z-index: 996;
     display: flex;
     justify-content: center;
     width: 100%;
