--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -13,7 +13,7 @@
         .card-item {
             margin: 6px 8px;
             padding: 8px 10px;
-            .CardBox(222px, 120px, #F2F2F2, 8px);
+            .CardBox(222px, 140px, #FFF, 8px);
             overflow: hidden;
 
             .card-img {
