--- a/src/pages/caseDetail/index.less
+++ b/src/pages/caseDetail/index.less
@@ -65,6 +65,11 @@
                 .FlexCenter();
                 .CardBox(120px, 50px, linear-gradient(180deg, #99164c 0%, #6e66693d 100%));
                 color: #FFF;
+                transition: background-color 0.3s;
+
+                &:focus, &:hover {
+                    background-color: #dd508b;
+                }
             }
 
         }
