--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -76,10 +76,11 @@
     .pop-content {
         position: fixed;
         z-index: 10;
-        .FlexCenter();
+        display: flex;
         flex-direction: column;
+        align-items: center;
         padding: 16px 12px;
-        .CardBox(800px, 550px, #FFF, 12px);
+        .CardBox(800px, 550px, #FFF);
 
         // transition: all 0.3s;
         animation: showToast 0.6s ease-in;
