--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -16,7 +16,6 @@
 
         ul>li {
             color: #5ff0fa;
-
         }
     }
 
@@ -39,6 +38,11 @@
                 border: 10px solid transparent;
                 border-width: 12px 8px;
                 border-image: url("../../assets/images/common/border-img.png") 12 8 round;
+            }
+
+            &.active {
+                color: #FFF;
+                background-color: #50b6fa2b;
             }
 
         }
