--- a/src/pages/caseDetail/index.less
+++ b/src/pages/caseDetail/index.less
@@ -12,9 +12,19 @@
         width: 970px;
 
         .area-title {
+            padding-top: 8px;
             font-size: 36px;
             font-weight: 800;
             text-align: center;
+        }
+
+        .area-describe {
+            .area-describe-tag {
+                .CardBox(100px; 38px; transparent);
+                .FlexCenter;
+                .FontStyle(20px; #222);
+                border: 1px solid #66ccFF;
+            }
         }
 
         .area-showCard {
