--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -7,6 +7,7 @@
     .yMain-dataList {
         display: flex;
         flex-wrap: wrap;
+        align-content: flex-start;
         min-height: 1200px;
         background-color: #bdfafd8f;
 
